# adaptive-rehab-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PACKAGE_STATUS.md  PHASE2_COMPLETE.md  PUBLISHING.md  README.md  RL_IMPLEMENTATION.md  SETUP.md  setup.py
service/: ai_comparison_game.py  config.yaml  demo_fuzzy.py  demo_rl.py  memory_game_ui.py  pyproject.toml  reaction_game_ui.py  requirements.txt  run_rest_server.py  setup.py  test_comprehensive.py  test_grpc.py  test_phase2.py  test_rl_quick.py  test_ui.py  test_web_integration.py
service/adaptrehab/: __init__.py  main.py
service/adaptrehab/comms/: __init__.py  grpc_server.py  rest_server.py
service/adaptrehab/core/: README.md  __init__.py  adaptation_engine.py  config_manager.py  event_bus.py  safety_wrapper.py
service/checkpoints/: grpc_test_session_rule_based_final.ckpt  hotswap_test_rule_based.ckpt  load_test_0_rule_based_final.ckpt  load_test_1_rule_based_final.ckpt  load_test_2_rule_based_final.ckpt  load_test_3_rule_based_final.ckpt  load_test_4_rule_based_final.ckpt  safety_test_rule_based_final.ckpt  test_Fast_Learner_-_Memory_Task_rule_based_final.ckpt  test_Plateau_Patient_-_Reaching_Task_rule_based_final.ckpt  test_Struggling_Patient_-_Memory_Task_rule_based_final.ckpt  test_Variable_Performance_-_Balance_Task_rule_based_final.ckpt  test_session_001_rule_based.ckpt  test_session_001_rule_based_final.ckpt  test_ui_1768327401_rule_based_final.ckpt  test_web_session_rule_based_final.ckpt
service/protos/: adaptation.proto
service/tests/: test_fuzzy_module.py  test_rl_module.py
(+28 files in other folders)
